[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Ayta Dzhivanov <kurt.alive.1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
do_something = 'nike:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
